--- a/index.html
+++ b/index.html
@@ -175,19 +175,19 @@ p{
   padding:140px 10vw 0;
   display:flex;
   flex-direction:column;
-  justify-content:flex-start;
 }
 
 .section.contact .section-block{
   position:static;
 }
 
-/* Footer centrado en página */
+/* Footer más abajo */
 .footer-wrapper{
   flex:1;
   display:flex;
-  align-items:center;
+  align-items:flex-start;
   justify-content:center;
+  padding-top:120px; /* ⬅ MÁS ABAJO */
 }
 
 .footer{
@@ -277,7 +277,7 @@ p{
   </div>
 </section>
 
-<!-- CONTACTO + FOOTER FINAL -->
+<!-- CONTACTO + FOOTER -->
 <section class="section contact">
   <div class="section-block">
     <h1>Contacto</h1>
