--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ nav span{
 /* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
-  top:140px;
+  top:180px; /* ⬅ TÍTULOS MÁS ABAJO */
   max-width:900px;
 }
 
@@ -187,7 +187,7 @@ p{
   display:flex;
   align-items:flex-start;
   justify-content:center;
-  padding-top:120px; /* ⬅ MÁS ABAJO */
+  padding-top:180px; /* ⬅ FOOTER MÁS ABAJO */
 }
 
 .footer{
