--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* ========= SECTIONS (EDITORIAL) ========= */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -98,7 +98,7 @@ nav span{
   max-width:900px;
 }
 
-/* ========= HERO ========= */
+/* ========= HERO (EXCEPCIÓN) ========= */
 .section.hero{
   padding:0;
   justify-content:center;
@@ -111,9 +111,10 @@ nav span{
 }
 
 .section.hero h1{
-  font-size:clamp(68px,6vw,120px); /* ⬅ REDUCIDO */
+  font-size:clamp(80px,7vw,140px);
 }
 
+/* ========= SUB ========= */
 .hero-sub{
   margin-top:24px;
   font-size:13px;
@@ -171,7 +172,7 @@ p{
   font-weight:500;
 }
 
-/* ========= CONTACTO ========= */
+/* ========= CONTACTO (CIERRE FINAL) ========= */
 .section.contact{
   padding:180px 10vw 0 17vw;
   display:flex;
@@ -222,7 +223,7 @@ p{
 <!-- HERO -->
 <section class="section hero">
   <div class="section-block">
-    <h1>Industrial Design</h1>
+    <h1>IndustrialDesign</h1>
     <div class="hero-sub">Structure · Process · Clarity</div>
   </div>
 </section>
