--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 }
 
 :root{
-  --ease:cubic-bezier(.2,.7,.1,1);
+  --nav-height:80px;
 }
 
 /* ========= BODY ========= */
@@ -49,7 +49,7 @@ nav{
   left:50%;
   transform:translateX(-50%);
   width:100%;
-  height:80px;
+  height:var(--nav-height);
   display:flex;
   justify-content:center;
   align-items:center;
@@ -67,9 +67,10 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= HERO (CENTRADO REAL) ========= */
+/* ========= HERO (CENTRO REAL) ========= */
 .section.hero{
-  min-height:100vh;
+  height:calc(100vh - var(--nav-height));
+  margin-top:var(--nav-height);
   display:flex;
   align-items:center;
   justify-content:center;
@@ -195,14 +196,6 @@ p{
   letter-spacing:.18em;
   color:#cfcfcf;
   text-align:center;
-}
-
-/* ========= REDUCED MOTION ========= */
-@media (prefers-reduced-motion:reduce){
-  *{
-    scroll-behavior:auto !important;
-    transition:none !important;
-  }
 }
 
 </style>
