--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 
-/* ========= RESET ========= */
+/* ================= RESET ================= */
 *{
   margin:0;
   padding:0;
@@ -17,35 +17,27 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ========= BODY ========= */
+/* ================= VARIABLES ================= */
+:root{
+  --nav-height:80px;
+  --section-left:16vw;
+}
+
+/* ================= BODY ================= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  overflow-y:scroll;
+  overflow-y:auto;
   scroll-snap-type:y mandatory;
-  cursor:none;
 }
 
-/* ========= CURSOR ========= */
-.cursor{
-  position:fixed;
-  width:8px;
-  height:8px;
-  border:1px solid #fff;
-  border-radius:50%;
-  pointer-events:none;
-  transform:translate(-50%,-50%);
-  z-index:1000;
-}
-
-/* ========= NAV ========= */
+/* ================= NAV ================= */
 nav{
   position:fixed;
   top:0;
-  left:50%;
-  transform:translateX(-50%);
+  left:0;
   width:100%;
-  height:80px;
+  height:var(--nav-height);
   display:flex;
   justify-content:center;
   align-items:center;
@@ -63,20 +55,23 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= HERO ========= */
-.section.hero{
+/* ================= SECTIONS ================= */
+.section{
   min-height:100vh;
   scroll-snap-align:start;
   display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  padding-top:80px;
+  justify-content:flex-start;
+  padding:180px 10vw 160px var(--section-left);
 }
 
-/* ⬅ desplazamiento solo del contenido del hero */
-.hero-inner{
-  transform:translateX(-6vw);
+/* ================= HERO ================= */
+.section.hero{
+  padding-top:var(--nav-height);
+  padding-left:0;
+  padding-right:0;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
 }
 
 .section.hero h1{
@@ -92,38 +87,14 @@ nav span{
   color:#777;
 }
 
-/* ========= SECTIONS ========= */
-.section{
-  min-height:100vh;
-  scroll-snap-align:start;
-  display:flex;
-  justify-content:flex-start;
-  padding:180px 10vw 160px 17vw;
-
-  -webkit-mask-image:linear-gradient(
-    to bottom,
-    transparent 0%,
-    black 18%,
-    black 82%,
-    transparent 100%
-  );
-  mask-image:linear-gradient(
-    to bottom,
-    transparent 0%,
-    black 18%,
-    black 82%,
-    transparent 100%
-  );
-}
-
-/* ========= SECTION BLOCK ========= */
+/* ================= SECTION BLOCK ================= */
 .section-block{
   position:sticky;
-  top:260px;
+  top:240px;
   max-width:900px;
 }
 
-/* ========= TYPO ========= */
+/* ================= TYPO ================= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -139,7 +110,7 @@ p{
   text-align:justify;
 }
 
-/* ========= ABOUT ========= */
+/* ================= ABOUT ================= */
 .about{
   display:flex;
   gap:40px;
@@ -152,7 +123,7 @@ p{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* ================= PORTFOLIO ================= */
 .project{
   display:block;
   margin-top:36px;
@@ -173,9 +144,9 @@ p{
   font-weight:500;
 }
 
-/* ========= CONTACTO ========= */
+/* ================= CONTACTO ================= */
 .section.contact{
-  padding:180px 10vw 0 17vw;
+  padding-bottom:0;
   display:flex;
   flex-direction:column;
 }
@@ -184,26 +155,19 @@ p{
   position:static;
 }
 
-.footer-wrapper{
-  flex:1;
-  display:flex;
-  align-items:flex-end;
-  justify-content:center;
-  padding-bottom:20px;
-}
-
+/* ================= FOOTER ================= */
 .footer{
+  margin-top:auto;
+  padding:60px 0 40px;
+  text-align:center;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
-  text-align:center;
 }
 
 </style>
 </head>
 <body>
-
-<div class="cursor"></div>
 
 <nav>
   <span data-i="0">Inicio</span>
@@ -215,7 +179,7 @@ p{
 
 <!-- HERO -->
 <section class="section hero">
-  <div class="hero-inner">
+  <div>
     <h1>IndustrialDesign</h1>
     <div class="hero-sub">Structure · Process · Clarity</div>
   </div>
@@ -227,11 +191,15 @@ p{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Me considero una persona
+        ecléctica y flexible, capaz de adaptarme a distintos entornos y contextos de trabajo.
+        No me sitúo en un extremo puramente artístico ni estrictamente técnico, sino en un punto
+        intermedio donde ambas dimensiones se complementan.
+        <br><br>
+        He estudiado en la Universidad Politécnica de Valencia, tras iniciar mi formación en la
+        Universitat Jaume I de Castellón, y completarla con un programa Erasmus en la Middlesex
+        University de Londres. Además, cuento con una formación profesional en electricidad,
+        que me aporta una base técnica sólida y una visión práctica del diseño.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -245,6 +213,10 @@ p{
     <a class="project" href="node.html">
       <span>Proyecto principal</span>
       <h3>NODE — Sistema modular</h3>
+    </a>
+    <a class="project" href="sixay.html">
+      <span>Mobiliario</span>
+      <h3>Sixay — Cómoda personalizada</h3>
     </a>
   </div>
 </section>
@@ -261,33 +233,25 @@ p{
 <section class="section contact">
   <div class="section-block">
     <h1>Contacto</h1>
-    <p>Email · Teléfono · LinkedIn</p>
+    <p>
+      luisblascoibanezberbel@gmail.com<br>
+      +34 630 51 18 06<br>
+      linkedin.com/in/luisblasiber
+    </p>
   </div>
 
-  <div class="footer-wrapper">
-    <div class="footer">
-      © 2026 · Luis Blasco — Industrial Design
-    </div>
+  <div class="footer">
+    © 2026 · Luis Blasco — Industrial Design
   </div>
 </section>
 
 <script>
-/* CURSOR */
-const cursor=document.querySelector(".cursor");
-let mx=0,my=0,x=0,y=0;
-
-addEventListener("mousemove",e=>{
-  mx=e.clientX;
-  my=e.clientY;
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.addEventListener("click",()=>{
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
+  });
 });
-
-(function loop(){
-  x+=(mx-x)*.2;
-  y+=(my-y)*.2;
-  cursor.style.left=x+"px";
-  cursor.style.top=y+"px";
-  requestAnimationFrame(loop);
-})();
 </script>
 
 </body>
