--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ nav span{
 .section-block{
   position:sticky;
   top:260px;
-  max-width:900px;
+  max-width:1000px;
 }
 
 /* ========= HERO ========= */
@@ -80,7 +80,9 @@ nav span{
 }
 
 .section.hero h1{
-  font-size:clamp(80px,7vw,140px);
+  font-size:clamp(100px,8.5vw,180px); /* ⬅ MÁS GRANDE */
+  font-weight:500;
+  line-height:1;
 }
 
 /* ========= TYPO ========= */
@@ -93,7 +95,6 @@ h1{
 p{
   font-size:15px;
   color:#aaa;
-  max-width:520px;
   line-height:1.6;
   text-align:justify;
 }
@@ -102,16 +103,18 @@ p{
 .about{
   display:flex;
   gap:32px;
-  margin-top:12px;              /* ⬅ MENOS ESPACIO */
-  align-items:flex-start;       /* ⬅ FOTO ALINEADA CON 1ª LÍNEA */
+  margin-top:12px;
+  align-items:flex-start;
 }
 
 .about p{
-  margin-top:0;                 /* ⬅ TEXTO SUBE */
+  max-width:600px;               /* ⬅ TEXTO MÁS ANCHO */
+  margin-top:0;
 }
 
 .about img{
   width:288px;
+  margin-left:24px;              /* ⬅ FOTO A LA DERECHA */
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
 }
@@ -180,7 +183,9 @@ p{
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
         a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
         ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación
+        ambas dimensiones del diseño.
+        <br><br>
+        He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación
         en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex
         University de Londres. Cuento además con una formación profesional en electricidad, que me ha
         aportado una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
