--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@ nav span{
   max-width:1000px;
 }
 
-/* ========= HERO ========= */
+/* ========= HERO (COMO ESTABA) ========= */
 .section.hero{
-  padding:0;
   justify-content:center;
   align-items:center;
   text-align:center;
@@ -108,13 +107,14 @@ p{
 }
 
 .about p{
-  max-width:600px;
+  max-width:620px;   /* texto un poco más ancho */
   margin-top:0;
 }
 
 .about img{
   width:288px;
   margin-left:24px;
+  margin-top:18px;   /* ⬅ imagen un poco más abajo */
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
 }
@@ -188,8 +188,12 @@ p{
         He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación
         en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex
         University de Londres. Cuento además con una formación profesional en electricidad, que me ha
-        aportado una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-        desde lo conceptual hasta la producción final, con soluciones consistentes.
+        aportado una base técnica sólida y una forma de pensar práctica.
+        <br><br>
+        Me interesa especialmente el diseño entendido como proceso, donde el análisis, la toma de
+        decisiones y la materialización final se equilibran. Disfruto trabajando con sistemas,
+        estructuras y soluciones bien fundamentadas, manteniendo siempre una visión abierta y
+        adaptable a diferentes escalas y contextos.
       </p>
 
       <img src="foto.jpg" alt="Foto personal">
@@ -237,7 +241,6 @@ buttons.forEach(btn=>{
     const index = btn.dataset.index;
 
     if(index === "4"){
-      // contacto → final real
       window.scrollTo({
         top: document.body.scrollHeight,
         behavior: "smooth"
