--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ nav span{
   max-width:1000px;
 }
 
-/* ========= HERO (COMO ESTABA) ========= */
+/* ========= HERO ========= */
 .section.hero{
   justify-content:center;
   align-items:center;
@@ -107,14 +107,14 @@ p{
 }
 
 .about p{
-  max-width:620px;   /* texto un poco más ancho */
+  max-width:620px;
   margin-top:0;
 }
 
 .about img{
   width:288px;
   margin-left:24px;
-  margin-top:18px;   /* ⬅ imagen un poco más abajo */
+  margin-top:8px; /* ⬅ imagen un poco más arriba */
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
 }
@@ -189,11 +189,6 @@ p{
         en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex
         University de Londres. Cuento además con una formación profesional en electricidad, que me ha
         aportado una base técnica sólida y una forma de pensar práctica.
-        <br><br>
-        Me interesa especialmente el diseño entendido como proceso, donde el análisis, la toma de
-        decisiones y la materialización final se equilibran. Disfruto trabajando con sistemas,
-        estructuras y soluciones bien fundamentadas, manteniendo siempre una visión abierta y
-        adaptable a diferentes escalas y contextos.
       </p>
 
       <img src="foto.jpg" alt="Foto personal">
