--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ nav span{
   display:flex;
   justify-content:flex-start;
 
-  /* layout desplazado */
-  padding:180px 10vw 160px 17vw;
+  /* desplazamiento editorial aumentado */
+  padding:180px 10vw 160px 22vw;
 
   -webkit-mask-image:linear-gradient(
     to bottom,
@@ -102,7 +102,7 @@ nav span{
 
 /* ========= HERO (EXCEPCIÓN) ========= */
 .section.hero{
-  padding:0;                     /* ⬅ anula desplazamiento */
+  padding:0;
   justify-content:center;
   align-items:center;
   text-align:center;
@@ -173,9 +173,9 @@ p{
   font-weight:500;
 }
 
-/* ========= CONTACTO (CIERRE FINAL) ========= */
+/* ========= CONTACTO ========= */
 .section.contact{
-  padding:180px 10vw 0 17vw;
+  padding:180px 10vw 0 22vw;
   display:flex;
   flex-direction:column;
 }
