--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ h1{
 }
 
 p{
-  margin-top:16px;            /* ⬅ texto más cerca del título */
+  margin-top:8px;          /* ⬅ texto aún más arriba */
   font-size:15px;
   color:#aaa;
   max-width:520px;
@@ -126,13 +126,14 @@ p{
 .about{
   display:flex;
   gap:40px;
-  margin-top:16px;
-  align-items:flex-start;     /* ⬅ alineación con primera línea */
+  margin-top:12px;
+  align-items:flex-start;
 }
 
 .about img{
   width:260px;
-  height:340px;               /* ⬅ altura reducida */
+  height:340px;
+  margin-top:32px;         /* ⬅ foto más abajo */
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
