--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ h1{
 }
 
 p{
-  margin-top:8px;          /* ⬅ texto aún más arriba */
+  margin-top:8px;
   font-size:15px;
   color:#aaa;
   max-width:520px;
@@ -133,7 +133,7 @@ p{
 .about img{
   width:260px;
   height:340px;
-  margin-top:32px;         /* ⬅ foto más abajo */
+  margin-top:20px;          /* ⬅ foto un poco más arriba */
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
